Refine Java module planning for 4.0